--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -1,3 +1,4 @@
 browser = chrome
 DashBoardURl = "URL to the Dashboard"
+TestdataPath = "C:\\Users\\SuManaSvi\\git\\LMS-UI\\src\\test\\resources\\testDataResource\\AssignmentData.json"
 
