--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>LMSUI</groupId>
-  <artifactId>LMS</artifactId>
+  <artifactId>LMSFinal</artifactId>
   <version>0.0.1-SNAPSHOT</version>
     <properties>
         <maven.compiler.source>20</maven.compiler.source>
@@ -99,7 +99,15 @@
           <version>4.13.2</version>
           <scope>compile</scope>
       </dependency>
+        <!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
+        </dependency>
 
 
-  </dependencies>
+
+
+    </dependencies>
 </project>
